<resources>
    <string name="app_name">Inventário App</string>
    <string name="name_product">Produto:</string>
    <string name="price_product">Preço:</string>
    <string name="quant_product">Quantidade:</string>
    <string name="tel_product">Telefone:</string>
    <string name="action_insert_dummy_data">inserir dados ficticios</string>
    <string name="empty_view_title_text">Inventário Vazio</string>
    <string name="quantity_empty">O campo Quantidade está vazio</string>
    <string name="quantity_less">Quantidade não pode ser menor que 0</string>
    <string name="select_image">Selecione uma foto</string>
    <string name="name_product_empty">"Qual o nome do produto?"</string>
    <string name="quant_product_stock">Quanto do produto está em estoque?</string>
    <string name="price_product_empty">Qual o valor unitário do produto?</string>
    <string name="tel_product_empty">Qual o telefone do fornecedor?</string>
    <string name="photo_product">Por favor, mostre uma foto do produto</string>
    <string name="call_caterer">"Ligar fornecedor"</string>
    <string name="empty_view_subtitle_text">add inventário clicando no botão</string>
    <string name="editor_delete_inventory_successful">Inventário deletado com sucesso</string>
    <string name="editor_delete_inventory_failed">inventário não excluído</string>
    <string name="cancel">cancelar</string>
    <string name="delete">deletar</string>
    <string name="sold_out">esgotado!</string>
    <string name="delete_dialog_msg">Tem certeza de que deseja excluir este produto?</string>
    <string name="keep_editing">continue editando</string>
    <string name="discard">descartar</string>
    <string name="sale_ok">Venda efetuada!</string>
    <string name="unsaved_changes_dialog_msg">Você tem alterações não salvas</string>
    <string name="editor_update_product_successful">Atualização bem sucedida</string>
    <string name="editor_update_product_failed">atualização falhou</string>
    <string name="editor_insert_product_successful">inserido com sucesso</string>
    <string name="editor_insert_product_failed">produto não inserido</string>
    <string name="editor_activity_title_new_product">Novo produto</string>
    <string name="editor_activity_title_edit_product">Editar</string>
    <string name="unit_product_price">$</string>
    <string name="hint_product_price">Preço</string>
    <string name="category_measurement">Moeda</string>
    <string name="hint_product_quantity">Quantidade</string>
    <string name="hint_product_name">Nome</string>
    <string name="category_overview">Produto</string>
    <string name="action_save">Produto salvo</string>
    <string name="action_delete">deletar</string>
    <string name="action_delete_all_entries">excluir todas as entradas</string>
    <string name="unknown_name">nome desconhecido</string>
    <string name="edit_this">Editar produto</string>
    <string name="sale">Vender</string>
    <string name="add_button">Adicionar Produto</string>
    <string name="select_photo">Selecionar Foto</string>
    <string name="quantity">Quantidade</string>
    <string name="increaseButton">Aumentar Quantidade</string>
    <string name="decreaseButton">Diminuir quantidade</string>
    <string name="empty_string">Uma ou mais das textviews estão vazias</string>
    <string name="phoneNumber">Contato fornecedor</string>
    <string name="lines_del">linhas excluídas de produtos do banco de dados</string>
</resources>
